Fix visibility utilities. Remove float from o-layout__item

--- a/utilities/_utilities.overrides.scss
+++ b/utilities/_utilities.overrides.scss
@@ -2,14 +2,6 @@
 // Some properties that must be fixed
 // ==========================================================================
 
-.o-layout {
-  @include inuit-clearfix;
-}
-
-.o-layout__item {
-  float: left;
-}
-
 .o-pack--top > .o-pack__item {
   vertical-align: top;
 }
